# gpt_bpe

./: .gitignore  LICENSE  Makefile  README.md  benchmark_test.go  go.mod  go.sum  gpt_bpe.go  gpt_bpe_test.go  prose.go  prose_js.go  prose_web.go  resources.go  runetree.go  runetree_test.go  utils.go
.github/workflows/: TestCommands.yml  TestGPT_BPE.yml  main.yml
cmd/dataset_tokenizer/: base.chunk  dataset_tokenizer.go  dataset_tokenizer_test.go  go.mod  go.sum  sanitizer.go  test
cmd/detokenizer/: detokenizer.go
cmd/model_downloader/: model_resolver.go
cmd/sentencepiece_converter/: merges.json  sentencepiece_converter.go
cmd/tokenizer_repl/: go.mod  tokenizer_repl.go
cmd/tokens_transformer/: tokens_transformer.go
dataset_tokenizer/: dataset_tokenizer.go
js/: gpt_bpe.js.map  js.go  test.js
lib/: CMakeLists.txt  gpt_bpe.h  gpt_bpe.py  library.go  library.h  library_test.go
lib/test/: test.c
pkg/unitrim/: unitrim.go
resources/: badcontext.json  converter.go  frankenstein_clip.txt  mmap.go  mmap_js.go  mmap_web.go  resolver.go  resources.go  resources_js.go  resources_web.go  subset.txt  trim_tests.jsonl  wiki.train.raw
resources/data/clip-tokenizer/: special_config.json  specials.txt  (+2 more)
resources/embedded/: gpt2-tokenizer.gob  llama-tokenizer.gob  mistral-tokenizer.gob  pile-tokenizer.gob
resources/embedder/: embedder  generate.go  go.mod  go.sum
resources/gpt2/: unitrim.json
resources/pile/: encoder.json
resources/test_references/: 753.txt
types/: methods.go  shared.go
wasm/: bindings.js  build.sh  compress.py  go.mod  test.js  wasm.go
(+25 files in other folders)
